lil durk - functioning

--- a/LILDURK/css/style.css
+++ b/LILDURK/css/style.css
@@ -20,6 +20,10 @@ body {
 	margin: auto;
 }
 
+.result {
+	display: none;
+}
+
 .info_entry, .result {
 	padding-top: 35px;
 }
@@ -103,6 +107,8 @@ input[type="submit"] {
 		    box-shadow: inset 0 0 0 1px #fff;
 
 	transition: opacity 0.25s;
+
+	cursor: pointer;
 }
 
 input[type="submit"]:hover {
@@ -111,6 +117,16 @@ input[type="submit"]:hover {
 
 input[type="submit"]:active, input[type="submit"]:focus {
 	opacity: 0.4;
+}
+
+.socials {
+	padding-top: 10px;
+}
+
+.socialimg {
+	width: 30px;
+	padding-left: 8px;
+	padding-right: 8px;
 }
 
 @media only screen and (max-width: 768px) {
