--- a/LILDURK/css/style.css
+++ b/LILDURK/css/style.css
@@ -1,22 +1,25 @@
 body {
-	background-image: url("../img/background.jpg");
-	background-size: cover;
-	width: 100%;
+	/* background-image: url("../img/background.jpg");
+	background-size: cover; */
+	background-color: #dd0905;
+	/* width: 100%; */
 	text-align: center;
-	font-family: "Dharma Gothic Regular";
-	font-size: 22px;
+	font-family: "Circular Standard", sans-serif;
+	font-size: 18px;
+	font-weight: normal;
+	color: #ffffff;
 	letter-spacing: 0.15em;
 }
 
 .header {
 	width: 100%;
 	margin: auto;
-	padding-top: 50px;
+	padding-top: 40px;
 }
 
 .logo {
 	width: 45vw;
-	max-width: 600px;
+	max-width: 480px;
 	margin: auto;
 }
 
@@ -25,20 +28,23 @@ body {
 }
 
 .info_entry, .result {
-	padding-top: 35px;
+	padding-top: 25px;
 }
 
 .footer {
 	width: 100%;
 	margin: auto;
-	padding-top: 50px;
+	padding-top: 30px;
 	padding-bottom: 40px;
 }
 
 .nickname {
-	font-family: "Dharma Gothic Extra Bold";
+	font-family: "Heading Pro Heavy", sans-serif;
 	font-size: 90px;
 	letter-spacing: normal;
+	color: #000000;
+	margin-left: 8px;
+	margin-right: 8px;
 }
 
 #otf_logo {
@@ -48,12 +54,7 @@ body {
 #tacklebox_logo {
 	margin-top: 30px;
 	width: 225px;
-	/* transition: opacity 0.3s; */
 }
-
-/* #tacklebox_logo:hover {
-	opacity: 0.5;
-} */
 
 input, select {
 	font-family: Arial, sans-serif;
@@ -89,14 +90,14 @@ option {
 /* END DISABLED/GREY STYLE */
 
 p {
-	padding-top: 10px;
+	padding-top: 15px;
 }
 
 input[type="submit"] {
 	background: #fff;
 	border: 2px solid #b29f6b;
 	border-radius: 10px;
-	padding: 6px 20px;
+	padding: 6px 16px;
 	background: -moz-linear-gradient(top, #fff 0%, #fff 50%, #ededed 51%, #ededed 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(50%,#fff), color-stop(51%,#ededed), color-stop(100%,#ededed));
 	background: -webkit-linear-gradient(top, #fff 0%,#fff 50%,#ededed 51%,#ededed 100%);
@@ -110,10 +111,6 @@ input[type="submit"] {
 
 	cursor: pointer;
 }
-
-/* input[type="submit"]:hover {
-	opacity: 0.7;
-} */
 
 input[type="submit"]:active, input[type="submit"]:focus {
 	opacity: 0.7;
@@ -129,11 +126,36 @@ input[type="submit"]:active, input[type="submit"]:focus {
 	padding-right: 8px;
 }
 
+#streaming_icons {
+	margin-top: 15px;
+}
+
+.music_icon_img {
+	width: 65px;
+	padding-left: 6px;
+	padding-right: 6px;
+	margin: auto;
+}
+
+@media (hover: hover) {
+	.music_icon_img:hover, .socialimg:hover {
+	  filter: brightness(0.50);
+	}
+}
+
+.music_icon_img:active, .socialimg:active {
+	filter: brightness(0.50);
+}
+
 #sharetext {
 	padding-left: 6px;
 }
 
 @media only screen and (max-width: 768px) {
+	body {
+		font-size: 16px;
+	}
+
 	.logo {
 		width: 80vw;
 		margin: auto;
@@ -141,14 +163,38 @@ input[type="submit"]:active, input[type="submit"]:focus {
 	#sharetext {
 		padding-left: 15px;
 	}
+
+	.single_promo {
+		margin-left: 10px;
+		margin-right: 10px;
+	}
+
+	.nickname {
+		font-size: 60px;
+	}
+
+	.music_icon_img {
+		width: 60px;
+	}
 }
 
 @font-face {
-  	font-family: "Dharma Gothic Regular";
-  	src: url("fonts/DharmaGothicE_Regular_R.otf");
+  	font-family: "Circular Standard";
+  	src: url("fonts/CircularStd-Book.otf") format("opentype");
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-  	font-family: "Dharma Gothic Extra Bold";
-  	src: url("fonts/DharmaGothicE_ExBold_R.otf");
+  	font-family: "Circular Standard";
+  	src: url("fonts/CircularStd-Black.otf") format("opentype");
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+  	font-family: "Heading Pro Heavy";
+  	src: url("fonts/Heading-Pro-Heavy-trial.ttf") format("truetype");
+	font-weight: normal;
+	font-style: normal;
 }
