--- a/LILDURK/css/style.css
+++ b/LILDURK/css/style.css
@@ -14,7 +14,7 @@ body {
 .header {
 	width: 100%;
 	margin: auto;
-	padding-top: 40px;
+	padding-top: 25px;
 }
 
 .logo {
@@ -53,7 +53,7 @@ body {
 
 #tacklebox_logo {
 	margin-top: 30px;
-	width: 225px;
+	width: 160px;
 }
 
 input, select {
@@ -65,7 +65,7 @@ input, select {
 	padding-bottom: 6px;
 	margin-left: 8px;
 	margin-right: 8px;
-	border: 2px solid #b29f6b;
+	border: 2px solid #b3b3b3;
 	border-radius: 2px;
 	margin-top: 20px;
 }
@@ -95,7 +95,7 @@ p {
 
 input[type="submit"] {
 	background: #fff;
-	border: 2px solid #b29f6b;
+	border: 2px solid #b3b3b3;
 	border-radius: 10px;
 	padding: 6px 16px;
 	background: -moz-linear-gradient(top, #fff 0%, #fff 50%, #ededed 51%, #ededed 100%);
@@ -165,8 +165,8 @@ input[type="submit"]:active, input[type="submit"]:focus {
 	}
 
 	.single_promo {
-		margin-left: 10px;
-		margin-right: 10px;
+		margin-left: 30px;
+		margin-right: 30px;
 	}
 
 	.nickname {
