simplified canvas w bold text

--- a/LILDURK/CANVASTEST/css/canvas.css
+++ b/LILDURK/CANVASTEST/css/canvas.css
@@ -33,6 +33,13 @@ button {
 }
 
 @font-face {
+  	font-family: "Circular Standard";
+  	src: url("fonts/CircularStd-Black.otf") format("opentype");
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
   	font-family: "Heading Pro Heavy";
   	src: url("fonts/Heading-Pro-Heavy-trial.ttf") format("truetype");
 	font-weight: normal;
