--- a/amco/css/stylev2.css
+++ b/amco/css/stylev2.css
@@ -24,11 +24,11 @@
 
 ::selection {
 	/* LANCE change highlight colour to yellow */
-    background: #d6c504; /* WebKit/Blink Browsers */
+    background: #808080; /* WebKit/Blink Browsers */
     color:#fff;
 }
 ::-moz-selection {
-    background: #d6c504; /* WebKit/Blink Browsers */
+    background: #808080; /* WebKit/Blink Browsers */
     color:#fff;
 }
 
@@ -762,7 +762,9 @@ a{
   display: flex;
 }
 #about {
-  background-color: #ffea00;
+  /* LANCE change about bg to white  */
+  /* background-color: #ffea00; */
+  background-color: #ffffff;
   display: flex;
   position: relative;
   /* LANCE add shadow here */
