--- a/MACSITE/css/style.css
+++ b/MACSITE/css/style.css
@@ -10,6 +10,13 @@
     font-style: normal;
 }
 
+:root {
+	/* colour constants */
+	--darkgrey: #202225;
+	--darkbackground1: #2b3640;
+	--darkbackground2: #607b91;
+}
+
 html {
   /* font-family: "Inconsolata", Menlo, Chicago, monospace; */
   font-family: 'FA Sysfont C', monospace;
@@ -180,6 +187,11 @@ html {
   height: 90vh;
 }
 
+.window a, .window a:visited {
+	text-decoration-style: dashed;
+	color: #0000ff;
+}
+
 .title-bar {
   flex: none;
   display: flex;
@@ -266,7 +278,8 @@ html {
 }
 
 .logo-img {
-	width: 80%;
+	width: 90%;
+	image-rendering: pixelated;
 }
 
 .screenshot-img {
@@ -284,6 +297,90 @@ html {
 	.menu-items li {
 		padding: 0.5rem 0.5rem;
 		font-size: 1rem;
+	}
+}
+
+/* DARK MODE */
+
+@media (prefers-color-scheme: dark) {
+	.desktop {
+		background: linear-gradient(45deg, var(--darkbackground1) 25%, transparent 25%, transparent 75%, var(--darkbackground1) 75%, var(--darkbackground1)), linear-gradient(45deg, var(--darkbackground1) 25%, transparent 25%, transparent 75%, var(--darkbackground1) 75%, var(--darkbackground1));
+		background-color: var(--darkbackground2);
+		background-size: 3px 3px;
+		background-position: 0 0, 1.5px 1.5px;
+	}
+
+	.menu-bar {
+	  	background-color: #fff;
+	  	border-bottom: 2px solid #fff;
+  	}
+
+	.menu-items {
+		background-color: var(--darkgrey);
+	}
+
+	.menu-items li {
+		color: #fff;
+	}
+
+	.menu-items li:hover {
+		background-color:rgba(255, 255, 255, 0.2)
+	}
+
+	.window {
+		background-color: var(--darkgrey);
+		color: #fff;
+		border: 0.1em solid #919191;
+	}
+
+	.window a, .window a:visited {
+		color: #4444ff;
+	}
+
+	.title-bar {
+		background: linear-gradient(#fff 50%, transparent 50%);
+		background-size: 6.6666666667% 13.3333333333%;
+		background-clip: content-box;
+	}
+
+	.title-bar .title {
+		background-color: var(--darkgrey);
+	}
+
+	.title-bar button {
+		border: 4px solid #fff;
+		outline: clamp($ui_line_size, $button_scaled_line_size, $ui_line_size * 3) solid var(--darkgrey);
+		background-color: var(--darkgrey);
+	}
+
+	.title-bar button.close::before {
+	  background: linear-gradient(#fff 0%, #fff 100%) left center, linear-gradient(#fff 0%, #fff 100%) right center, linear-gradient(#fff 0%, #fff 100%) center top, linear-gradient(#fff 0%, #fff 100%) center bottom;
+	  background-size: 30% 4px, 30% 4px, 4px 30%, 4px 30%;
+	  background-repeat: no-repeat;
+	}
+
+	.title-bar button.close::after {
+	  background: linear-gradient(#fff 0%, #fff 100%) left center, linear-gradient(#fff 0%, #fff 100%) right center, linear-gradient(#fff 0%, #fff 100%) center top, linear-gradient(#fff 0%, #fff 100%) center bottom;
+	  background-size: 22.5% 3.6363636364px, 22.5% 3.6363636364px, 3.6363636364px 22.5%, 3.6363636364px 22.5%;
+	  background-repeat: no-repeat;
+	  transform: rotate(45deg) scale(1.1);
+	}
+
+	.title-bar button.close:active::before, .title-bar button.close:active::after {
+	  opacity: 1;
+	}
+	.title-bar button.resize {
+	  background: linear-gradient(#fff 0%, #fff 100%) left 58%, linear-gradient(to bottom, #fff 0%, #fff 100%) 58% top;
+	  background-size: 60% 4px, 4px 60%;
+	  background-repeat: no-repeat;
+	  background-color: var(--darkgrey);
+	}
+	.title-bar button.resize:active {
+	  background: var(--darkgrey);
+	}
+
+	.logo-img {
+		filter: invert(1);
 	}
 }
 
