--- a/MACSITE/css/style.css
+++ b/MACSITE/css/style.css
@@ -64,8 +64,8 @@ html {
 .desktop-icons .icon {
   position: relative;
   display: block;
-  width: 2rem;
-  height: 2rem;
+  width: 3rem;
+  height: 3rem;
   margin: 1rem 2rem;
   /* border: 2px solid black; */
   cursor: pointer;
@@ -89,7 +89,7 @@ html {
 .desktop-icons .icon-label {
   display: inline-block;
   position: absolute;
-  top: 2rem;
+  top: 3rem;
   left: 50%;
   padding: 0 0.25em;
   margin-top: -2px;
@@ -127,14 +127,14 @@ html {
 }
 
 .window-icons .icon-label {
-	top: 1.5rem;
+	top: 2.5rem;
 	margin-top: 8px;
 	overflow: auto;
 }
 
 .window-icons .icon {
-  width: 2rem;
-  height: 2rem;
+  width: 3rem;
+  height: 3rem;
   /* border: 2px solid black; */
   cursor: pointer;
 }
@@ -157,7 +157,8 @@ html {
 }
 .menu-items li {
   padding: 0.2rem 0.8rem;
-  margin: 0;
+  /* margin: 0; */
+  margin-top: 0.1rem;
   margin-bottom: 0.1rem;
   font-size: 1.1rem;
   font-weight: bold;
@@ -179,6 +180,10 @@ html {
 .menu-items li:hover {
 	opacity: 1;
 	background-color:rgba(0, 0, 0, 0.2)
+}
+
+#menu-time {
+	margin-left: auto;
 }
 
 
