--- a/MACSITE/css/style.css
+++ b/MACSITE/css/style.css
@@ -107,6 +107,12 @@ html {
       -ms-user-select: none;
           user-select: none;
 }
+
+.desktop-icons a {
+	color: inherit;
+	text-decoration: inherit;
+}
+
 .desktop-icons .icon-label[contenteditable] {
   -webkit-user-select: auto;
      -moz-user-select: auto;
@@ -118,7 +124,7 @@ html {
   position: relative;
   top: 0;
   left: 0;
-  padding-bottom: 1em;
+  padding-bottom: 1.6em;
   flex: none;
   flex-wrap: wrap;
   display: flex;
@@ -130,11 +136,14 @@ html {
 	top: 2.5rem;
 	margin-top: 8px;
 	overflow: auto;
+	line-height: 80%;
+	padding: 0.2em 0.4em;
 }
 
 .window-icons .icon {
   width: 3rem;
   height: 3rem;
+  margin: 1.2rem 2rem;
   /* border: 2px solid black; */
   cursor: pointer;
 }
@@ -322,10 +331,11 @@ html {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0.4rem 0.8rem;
+  padding: 0.2rem 0.8rem;
   border: 0.1rem solid black;
   border-width: 0.1rem 0;
-  font-size: 1rem;
+  font-family: 'FindersKeepers', monospace;
+  font-size: 1.4rem;
 }
 
 .logo-img {
