--- a/MACSITE/css/style.css
+++ b/MACSITE/css/style.css
@@ -459,9 +459,13 @@ html {
 	}
 
 	.desktop-icons .icon[data-is-open=true] .icon-label {
-	  background-color: #fff;
-	  color: #000;
+	 	background-color: #fff;
+		color: #000;
 	}
+
+	/* .desktop-icons .icon img {
+		filter: invert(1);
+	} */
 
 	.title-bar {
 		background: linear-gradient(#fff 50%, transparent 50%);
