--- a/POPCAAN/css/style.css
+++ b/POPCAAN/css/style.css
@@ -1,4 +1,5 @@
 body {
+	background-color: #000000;
 	background-image: url("../assets/background.jpg");
 	background-size: cover;
 	background-attachment: fixed;
