--- a/MIXEDEMOTIONS/css/base.css
+++ b/MIXEDEMOTIONS/css/base.css
@@ -2,7 +2,7 @@ html, body {
 	background-color: #00368C;
 	color: #fff;
 	font-family: 'Founders Grotesk', Helvetica, sans-serif;
-	font-weight: normal;
+	font-weight: 400;
 }
 
 /* Style the video: 100% width and height to cover the entire window */
@@ -34,7 +34,7 @@ html, body {
 	transition: opacity 1s;
 	-webkit-transition: opacity 1s;
 	/* font-weight: bold; */
-	font-size: 2.7vw;
+	font-size: 2.5vw;
 	letter-spacing: 0.11vw;
 	padding: 20px;
 }
@@ -67,26 +67,28 @@ html, body {
 }
 
 .content {
-	margin: 4vw;
+	margin: 4vw 15vw;
 }
 
 .question {
-	font-size: 2vw;
-	/* font-weight: bold; */
+	font-size: 4vw;
+	font-weight: 500;
 	text-transform: uppercase;
 }
 
 .button {
-  background-color: #0071a7;
+  background-color: #00378c;
   border: none;
+  border-radius: 11px;
   color: white;
   padding: 1vw 2vw;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 1.5vw;
+  font-size: 1.45vw;
   margin: 4px 2px;
   cursor: pointer;
+  font-weight: 500;
 }
 
 /* #container1, #container2a, #container2b { */
@@ -169,7 +171,7 @@ html, body {
 }
 
 @font-face {
-    font-family: 'Founders Grotesk Regular';
+    font-family: 'Founders Grotesk';
     src: url('font/FoundersGrotesk-RegularItalic.woff2') format('woff2'),
         url('font/FoundersGrotesk-RegularItalic.woff') format('woff'),
         url('font/FoundersGrotesk-RegularItalic.ttf') format('truetype');
