--- a/MIXEDEMOTIONS/css/base.css
+++ b/MIXEDEMOTIONS/css/base.css
@@ -93,7 +93,7 @@ button {
 }
 
 .button {
-  background-color: #00378c;
+  background-color: #00368C;
   border: none;
   border-radius: 11px;
   color: white;
