Fix sticky hover

--- a/MIXEDEMOTIONS/css/base.css
+++ b/MIXEDEMOTIONS/css/base.css
@@ -45,10 +45,13 @@ button {
 	pointer-events: none; /* this gets changed dynamically */
 }
 
-.button:hover, input[type=submit]:hover {
-	opacity: .5 !important;
-	transition: opacity 0.35s;
-	-webkit-transition: opacity 0.35s;
+/* hover effects only on web - so no sticky hover on mobile */
+@media (hover: hover) {
+	.button:hover, input[type=submit]:hover {
+		opacity: .5 !important;
+		transition: opacity 0.35s;
+		-webkit-transition: opacity 0.35s;
+	}
 }
 
 .container {
