--- a/MIXEDEMOTIONS/css/guestbook.css
+++ b/MIXEDEMOTIONS/css/guestbook.css
@@ -57,7 +57,7 @@ a {
 	text-rendering: geometricPrecision;
 }
 .guestbook_text {
-	margin: 2.4vw;
+	margin: 3.6vw;
 }
 .guestbook_name_and_area {
 	text-align: right;
@@ -85,15 +85,21 @@ a {
 }
 
 .guestbook_btns_div {
-	margin-top: 15px;
+	margin-top: 25px;
 }
 
-.guestbook_btns_div button {
+/* .guestbook_btns_div button {
 	width: 20%;
 	margin-left: 1vw;
 	margin-right: 1vw;
 	padding-top: 0.7vw;
 	padding-bottom: 0.4vw;
+} */
+
+#prevPageText, #nextPageText {
+	margin-left: 4vw;
+	margin-right: 4vw;
+	cursor: pointer;
 }
 
 .endpage_albumcta img {
@@ -168,6 +174,11 @@ a {
 	}
 
 	.endpage_albumcta p a:hover {
+		opacity: 0.5;
+		transition: opacity 0.1s;
+	}
+
+	#prevPageText:hover, #nextPageText:hover {
 		opacity: 0.5;
 		transition: opacity 0.1s;
 	}
@@ -256,7 +267,7 @@ a {
 	}
 
 	.guestbook_text {
-		margin: 4vw;
+		margin: 8vw;
 	}
 
 	.endpage_btn_div, .endpage_albumcta, .endpage_videos, .guestbook_btns_div  {
@@ -273,10 +284,15 @@ a {
 		margin-right: 18px;
 	}
 
-	.guestbook_btns_div button {
+	/* .guestbook_btns_div button {
 		width: 25%;
 		padding-top: 3vw;
 		margin-left: 4vw;
 		margin-right: 4vw;
+	} */
+
+	#prevPageText, #nextPageText {
+		margin-left: 7vw;
+		margin-right: 7vw;
 	}
 }
